--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,55 +22,55 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </div>
     <div class="hero"></div>
-    <main class="content">
-        <section class="search-engine-optimization">
+    <div class="content">
+        <div class="search-engine-optimization">
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg" alt="SEO surrounded by Ways to increase it" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        </div>
+        <div id="online-reputation-management" class="online-reputation-management">
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/online-reputation-management.jpg" alt="bar chart showing reputation increasing" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        </div>
+        <div id="social-media-marketing" class="social-media-marketing">
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/social-media-marketing.jpg" alt="popular apps and ways for social media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </section>
-    </main>
-    <aside class="benefits">
-        <section class="benefit-lead">
+        </div>
+    </div>
+    <div class="benefits">
+        <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/lead-generation.png" alt="gear pointing towards money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </section>
-        <section class="benefit-brand">
+        </div>
+        <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/brand-awareness.png" alt="glowing lightbulb wearing a suit"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </section>
-        <section class="benefit-cost">
+        </div>
+        <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/cost-management.png" alt="gear surrounded by coins"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </section>
-    </aside>
+        </div>
+    </div>
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
